package osm.surveyor.task.user.validator;

import javax.validation.ConstraintValidator;
import javax.validation.ConstraintValidatorContext;

import org.springframework.beans.factory.annotation.Autowired;

import osm.surveyor.task.user.repository.SiteUserRepository;

public class UniqueLoginValidator implements ConstraintValidator<UniqueLogin, String> {

    private final SiteUserRepository userRepository;

    public UniqueLoginValidator() {
        this.userRepository = null;
    }

    @Autowired
    public UniqueLoginValidator(SiteUserRepository userRepository) {
        this.userRepository = userRepository;
    }

    @Override
    public boolean isValid(String value, ConstraintValidatorContext context) {
        return userRepository == null || userRepository.findByUsername(value) == null;
    }
}
